fix(ui): wrap tabs when no space is left
This should be more optimized for mobile usage in the future.
E.g. collapsing the tabs.

--- a/ui/src/components/Tabs/Tabs.module.scss
+++ b/ui/src/components/Tabs/Tabs.module.scss
@@ -28,4 +28,5 @@
 
 .Tabs {
   display: flex;
+  flex-wrap: wrap;
 }
